--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
         <div class="section-title">
           <h2>Pricing</h2>
-          <p>Below illustrates our pre-defined pricing model for more generic business solutions. Consultations are free of charge.</p>
+          <p>Below is our base pricing options and solutions available. Consultations are free of charge.</p>
         </div>
 
         <div class="row">
@@ -552,13 +552,18 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
               <h3>Custom Basic Static Website</h3>
-              <h4><sup>$</sup>750<span>One-Time Cost</span></h4>
+              <h4><sup>$</sup>750<span>One-Time Base Cost</span></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Hosting website on server</li>
-                <li><i class="bx bx-check"></i> Contact form with Captcha</li>
-                <li><i class="bx bx-check"></i> Connect your domain name to server</li>
-                <li class="na"><i class="bx bx-x"></i> <span>Provided Domain</span></li>
-                <li class="na"><i class="bx bx-x"></i> <span>Provided server</span></li>
+                <li><i class="bx bx-check"></i> Website up and running with your provided domain and server</li>
+                <li><i class="bx bx-check"></i> Functioning contact form</li>
+                <li><i class="bx bx-check"></i> Custom color scheme and content</li>
+                <li><i class="bx bx-check"></i> Search engine optimization</li>
+                <li><i class="bx bx-check"></i> Website analytics</li>
+                <li><i class="bx bx-check"></i> 60 day free maintenance window</li>
+                <li><i class="bx bx-check"></i> Maintence plans available</li>
+                <!-- <li class="na"><i class="bx bx-x"></i> <span>Website maintenance</span></li>
+                <li class="na"><i class="bx bx-x"></i> <span>Hosting on our servers</span></li>
+                <li class="na"><i class="bx bx-x"></i> <span>Provided domain</span></li> -->
               </ul>
               <a href="#" class="buy-btn">Get Started</a>
             </div>
@@ -567,13 +572,15 @@
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>E-Commerce or WordPress Website</h3>
-              <h4><sup>$</sup>1350<span>One-Time Cost</span></h4>
+              <h4><sup>$</sup>2,000<span>One-Time Base Cost</span></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-                <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
+                <li><i class="bx bx-check"></i> Website up and running with your provided domain and server</li>
+                <li><i class="bx bx-check"></i> Desired available plugins</li>
+                <li><i class="bx bx-check"></i> Custom color scheme and content</li>
+                <li><i class="bx bx-check"></i> Search engine optimization</li>
+                <li><i class="bx bx-check"></i> Website analytics</li>
+                <li><i class="bx bx-check"></i> 90 day free maintenance window</li>
+                <li><i class="bx bx-check"></i> Maintence plans available</li>
               </ul>
               <a href="#" class="buy-btn">Get Started</a>
             </div>
@@ -584,11 +591,12 @@
               <h3>Custom Advanced Solution</h3>
               <h4><a href="#contact">Contact Us</a></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-                <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
+                <li><i class="bx bx-check"></i> Custom template, content, and color scheme</li>
+                <li><i class="bx bx-check"></i> Static, e-commerce, wordpress, or custom web solution</li>
+                <li><i class="bx bx-check"></i> In-house hosting or hosted on our servers</li>
+                <li><i class="bx bx-check"></i> Maintence plans available</li>
+                <li><i class="bx bx-check"></i> Custom graphics, brochures, business cards, etc. available</li>
+                <li><i class="bx bx-check"></i> And more...</li>
               </ul>
               <a href="#" class="buy-btn">Get Started</a>
             </div>
