--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CyberTitan Web Technologies</title>
+  <title>CyberTitan Labs - Website and Development Services</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -825,7 +825,7 @@
               New York, NY 535022<br>
               United States <br><br> -->
               <!-- <strong>Phone:</strong> +1 5589 55488 55<br> -->
-              <strong>Email:</strong> info@cybertitaninc.com<br>
+              <strong>Email:</strong> info@cybertitanlabs.com<br>
             </p>
           </div>
 
@@ -897,7 +897,7 @@
     <div class="container footer-bottom clearfix">
       <div class="copyright">
         &copy; Copyright <var id="year"
-          style="font-style:normal;"></var> <strong><span>CyberTitan Web Technologies Inc</span></strong>. All Rights Reserved
+          style="font-style:normal;"></var> <strong><span>CyberTitan Labs Inc</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
@@ -922,7 +922,7 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Template Main JS File -->dsadsa fdsgvfd
   <script src="assets/js/main.js"></script>
 
 </body>
@@ -932,4 +932,8 @@
   // Set date on copyright information in footer
   let date = new Date();
   document.getElementById('year').append(date.getFullYear());
+  
+  function getFormData(form) {
+    
+  }
 </script>
