--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <img src="assets/img/skills.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
-            <h3>Our Most Popular Technology Stacks</h3>
+            <h3>Our Most Popular Technology</h3>
             <p class="fst-italic">
               Our team is full of knowledgeable engineers and are able to provide products that fit your businees needs.
               Below are our most requested technologies:
