--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
           </div> -->
 
           <div class="col-lg-12 mt-12 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form id="contactForm" role="form" class="contact-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -782,11 +782,13 @@
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <div class="loading">Loading...</div>
+                <div class="error-message">Error delivering your message. Please try again or contact
+                  info@cybertitanlabs.com</div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="button" data-callback="onSubmit" onclick="onSubmit()">Send
+                  Message</button></div>
             </form>
           </div>
 
@@ -896,8 +898,8 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <var id="year"
-          style="font-style:normal;"></var> <strong><span>CyberTitan Labs Inc</span></strong>. All Rights Reserved
+        &copy; Copyright <var id="year" style="font-style:normal;"></var> <strong><span>CyberTitan Labs
+            Inc</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
@@ -920,7 +922,6 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->dsadsa fdsgvfd
   <script src="assets/js/main.js"></script>
@@ -932,8 +933,63 @@
   // Set date on copyright information in footer
   let date = new Date();
   document.getElementById('year').append(date.getFullYear());
-  
+
+  //TODO: Integrate recaptcha
+
+  function serializeFormData(formData) {
+    let serializedData = {};
+    for (let [key, value] of formData) {
+      serializedData[key] = value;
+    }
+
+    return serializedData;
+  }
+
   function getFormData(form) {
-    
+    let formData = new FormData(form);
+    let serializedData = serializeFormData(formData);
+    let messageMetaData = { receiver: 'eyanez1230@gmail.com', company: "CyberTitan Labs Inc." };
+
+    let mergedData = { ...serializedData, ...messageMetaData };
+    return mergedData;
+  }
+
+  async function sendEmail(data) {
+    document.getElementsByClassName('loading')[0].style.display = 'block';
+
+    const url = "https://vbzxoqlkll.execute-api.us-west-2.amazonaws.com/prod/contact";
+    const response = await fetch(url, {
+      method: 'POST',
+      cache: 'no-cache',
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify(data)
+    });
+
+    document.getElementsByClassName('loading')[0].style.display = 'none';
+
+    return response;
+  }
+
+  async function onSubmit() {
+    let contactForm = document.getElementById('contactForm');
+
+    if (contactForm.checkValidity() === false) {
+      contactForm.classList.add('was-validated');
+    } else {
+      let data = getFormData(contactForm);
+
+      let response = await sendEmail(data);
+
+      if (response.status === 200) {
+        // Handle success
+        document.getElementsByClassName('sent-message')[0].style.display = 'block';
+        document.getElementById('contactForm').reset();
+      } else {
+        // Handle error
+        document.getElementsByClassName('error-message')[0].style.display = 'block';
+      }
+    }
   }
 </script>
