--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CyberTitan Labs - Website and Development Services</title>
+  <title>CyberTitan Labs</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -148,7 +148,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>We Are CyberTitan</h2>
+          <h2>We Are CyberTitan Labs</h2>
         </div>
 
         <div class="row content">
@@ -168,7 +168,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              CyberTitan develops products and services to grow your business' internet presence. We provide consultancy
+              CyberTitan Labs develops products and services to grow your business' internet presence. We provide consultancy
               and support for various business and partners. Among them, there are small to medium size businesses. Rest
               assured that the industry experience our
               engineers offer will be adequate to grow your business on the web.
@@ -189,7 +189,7 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch  order-2 order-lg-1">
 
             <div class="content">
-              <h3>The Advantages of Working With <strong>CyberTitan</strong></h3>
+              <h3>The Advantages of Working With <strong>CyberTitan Labs</strong></h3>
               <p>
                 These are some of the reasons our clients trust us with their business needs:
               </p>
@@ -821,7 +821,8 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-4 footer-contact">
-            <h3>CyberTitan</h3>
+            <!-- <h3>CyberTitan Labs</h3> -->
+            <img src="assets/img/cybertitanLabsLogoBlue.png" alt="" style="height: auto; max-width: 65%; margin-bottom:5px;">
             <p>
               <!-- A108 Adam Street <br>
               New York, NY 535022<br>
@@ -849,11 +850,11 @@
 
           <div class="col-lg-4 col-md-4 footer-links">
             <div class="social-links mt-3" style="text-align:right;">
-              <a href="https://twitter.com/cybertitaninc" target="_blank" class="twitter"><i
+              <a href="https://twitter.com/cybertitanlabs" target="_blank" class="twitter"><i
                   class="bx bxl-twitter"></i></a>
               <a href="https://www.facebook.com/CyberTitan-109207061758595" target="_blank" class="facebook"><i
                   class="bx bxl-facebook"></i></a>
-              <a href="https://www.instagram.com/cybertitaninc" target="_blank" class="instagram"><i
+              <a href="https://www.instagram.com/cybertitanlabs" target="_blank" class="instagram"><i
                   class="bx bxl-instagram"></i></a>
             </div>
           </div>
