--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
-  <!-- Template Main JS File -->dsadsa fdsgvfd
+  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
