--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                   info@cybertitanlabs.com</div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="button" class="g-recaptcha" data-sitkey="6Le_3v8fAAAAAFTMD6JWGyxD2-LB9Ndk4B4tow-h" data-callback="onSubmit" onclick="onSubmit()">Send Message</button></div>
+              <div class="text-center"><button type="button" class="g-recaptcha" data-sitekey="6Le_3v8fAAAAAFTMD6JWGyxD2-LB9Ndk4B4tow-h" data-callback="onSubmit" onclick="onSubmit()">Send Message</button></div>
             </form>
           </div>
 
