Fixed recaptcha style

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              CyberTitan Labs develops products and services to grow your business' internet presence. We provide consultancy
+              CyberTitan Labs develops products and services to grow your business' internet presence. We provide
+              consultancy
               and support for various business and partners. Among them, there are small to medium size businesses. Rest
               assured that the industry experience our
               engineers offer will be adequate to grow your business on the web.
@@ -787,7 +788,9 @@
                   info@cybertitanlabs.com</div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="button" class="g-recaptcha" data-sitekey="6Le_3v8fAAAAAFTMD6JWGyxD2-LB9Ndk4B4tow-h" data-callback="onSubmit" onclick="onSubmit()">Send Message</button></div>
+              <div class="text-center"><button type="button" class="g-recaptcha"
+                  data-sitekey="6Le_3v8fAAAAAFTMD6JWGyxD2-LB9Ndk4B4tow-h" data-callback="onSubmit"
+                  onclick="onSubmit()">Send Message</button></div>
             </form>
           </div>
 
@@ -801,32 +804,15 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <!-- <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
     <div class="footer-top">
       <div class="container">
         <div class="row">
 
           <div class="col-lg-4 col-md-4 footer-contact">
             <!-- <h3>CyberTitan Labs</h3> -->
-            <img src="assets/img/cybertitanLabsLogoBlue.png" alt="" style="height: auto; max-width: 65%; margin-bottom:5px;">
+            <img src="assets/img/cybertitanLabsLogoBlue.png" alt=""
+              style="height: auto; max-width: 65%; margin-bottom:5px;">
             <p>
-              <!-- A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br> -->
-              <!-- <strong>Phone:</strong> +1 5589 55488 55<br> -->
               <strong>Email:</strong> info@cybertitanlabs.com<br>
             </p>
           </div>
@@ -857,41 +843,6 @@
                   class="bx bxl-instagram"></i></a>
             </div>
           </div>
-
-          <!-- <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div> -->
-
-          <!-- <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div> -->
-
-          <!-- <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div> -->
-
         </div>
       </div>
     </div>
@@ -901,13 +852,6 @@
         &copy; Copyright <var id="year" style="font-style:normal;"></var> <strong><span>CyberTitan Labs
             Inc</span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-      </div>
     </div>
   </footer><!-- End Footer -->
 
@@ -915,7 +859,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
-      <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -923,13 +867,24 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/jquery.initialize.min.js"></script>
 </body>
 
 </html>
 <script>
+  $(document).ready(function () {
+    $('.grecaptcha-badge').appendTo("body"); //fix recaptcha positioning to body  
+  });
+  
+  $.initialize(".grecaptcha-badge", function () {
+    $(this).appendTo("body"); //fix recaptcha positioning to body, even if it loads after the page  
+  });
+
+
   // Set date on copyright information in footer
   let date = new Date();
   document.getElementById('year').append(date.getFullYear());
@@ -988,10 +943,10 @@
         // Handle success
         document.getElementsByClassName('sent-message')[0].style.display = 'block';
         document.getElementById('contactForm').reset();
-      
+
         // Hide message after 5 seconds
-        setTimeout(function() {
-        document.getElementsByClassName('sent-message')[0].style.display = 'none';
+        setTimeout(function () {
+          document.getElementsByClassName('sent-message')[0].style.display = 'none';
         }, 5000)
       } else {
         // Handle error
