--- a/index.html
+++ b/index.html
@@ -858,8 +858,6 @@
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
-
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -872,10 +870,13 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/jquery.initialize.min.js"></script>
+
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </body>
 
 </html>
 <script>
+  // Need this because on this templat recaptcha will append to form element instead of body
   $(document).ready(function () {
     $('.grecaptcha-badge').appendTo("body"); //fix recaptcha positioning to body  
   });
