--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="button" class="g-recaptcha"
-                  data-sitekey="6LeE_f8fAAAAAOEvTHyWTlAtPn0QTMj8lu2isSg2" data-callback="onSubmit"
+                  data-sitekey="6LeE_f8fAAAAAOEvTHyWTlAtPn0QTMj8lu2isSg2"
                   onclick="onSubmit()">Send Message</button></div>
             </form>
           </div>
@@ -929,6 +929,7 @@
   }
 
   async function onSubmit() {
+    debugger;
     grecaptcha.execute();
     let captchaResponse = grecaptcha.getResponse();
     let contactForm = document.getElementById('contactForm');
