--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta property="og:image" content="assets/img/logo.png" />
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
