--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="#plans">Plans</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
@@ -371,20 +371,19 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing section-bg">
+    <section id="plans" class="pricing section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Pricing</h2>
-          <p>Below is our base pricing options and solutions available. Consultations are free of charge.</p>
+          <h2>Plans</h2>
+          <p>Below is our base plan options and solutions available. Consultations are free of charge.</p>
         </div>
 
         <div class="row">
-
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
               <h3>Custom Basic Static Website</h3>
-              <h4><sup>$</sup>750<span>One-Time Base Cost</span></h4>
+              <!-- <h4><sup>$</sup>750<span>One-Time Base Cost</span></h4> -->
               <ul>
                 <li><i class="bx bx-check"></i> Website up and running with your provided domain and server</li>
                 <li><i class="bx bx-check"></i> Functioning contact form</li>
@@ -401,7 +400,7 @@
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>E-Commerce or WordPress Website</h3>
-              <h4><sup>$</sup>2,000<span>One-Time Base Cost</span></h4>
+              <!-- <h4><sup>$</sup>2,000<span>One-Time Base Cost</span></h4> -->
               <ul>
                 <li><i class="bx bx-check"></i> Website up and running with your provided domain and server</li>
                 <li><i class="bx bx-check"></i> Desired available plugins</li>
@@ -418,7 +417,7 @@
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
               <h3>Custom Advanced Solution</h3>
-              <h4><a href="#contact">Contact Us</a></h4>
+              <!-- <h4><a href="#contact">Contact Us</a></h4> -->
               <ul>
                 <li><i class="bx bx-check"></i> Custom template, content, and color scheme</li>
                 <li><i class="bx bx-check"></i> Static, e-commerce, wordpress, or custom web solution</li>
@@ -567,7 +566,7 @@
             |
             <a href="#portfolio">Portfolio</a>
             |
-            <a href="#pricing">Pricing</a>
+            <a href="#plans">Plans</a>
             |
             <a href="#faq">FAQ</a>
             |
