--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
               </div>
               <div class="text-center"><button type="button" class="g-recaptcha"
                   data-sitekey="6LeE_f8fAAAAAOEvTHyWTlAtPn0QTMj8lu2isSg2"
+                  data-badge="bottomleft"
                   data-callback="onSubmit">Send Message</button></div>
             </form>
           </div>
