Added keywords and SEO

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Homepage" />
+  <meta property="og:description" content="Los Angeles based website design agency. CyberTitan Labs develops and delivers websites for your business since 2022. Request a free consultation!" />
+  <meta property="og:url" content="https://www.cybertitanlabs.com/" />
+
 
   <title>CyberTitan Labs</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Los Angeles based website design agency. CyberTitan Labs develops and delivers websites for your business since 2022. Request a free consultation!" name="description">
+  <meta content="develop, web, creating a website for your business, create website for business, develop, website, website development, website development companies" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -29,13 +34,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Arsha - v4.7.1
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
