--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Homepage" />
+  <meta property="og:title" content="CyberTitan Labs" />
   <meta property="og:description" content="Los Angeles based website design agency. CyberTitan Labs develops and delivers websites for your business since 2022. Request a free consultation!" />
   <meta property="og:url" content="https://www.cybertitanlabs.com/" />
 
